# data-fetcher

./: .gitignore  README.md  pyproject.toml
data/NY_2024/: bldg0000072-up01.xml  bldg0000072-up03.xml
src/: __init__.py  download_data.py
