[project]
name = "data-fetcher"
version = "0.1.0"
description = "Fetch data for OCHRE or foresee simulations"
authors = [{ name = "Alex Lee", email = "lee@switch.box" }]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["download_data"]
package-dir = {"" = "src"}

[project.scripts]
download_data = "download_data:download_data"